added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+   <div>
+    <h3>My first Website</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quaerat obcaecati reprehenderit, ratione est nihil dolores similique eveniet quia iure soluta omnis odio reiciendis facere pariatur impedit maiores sunt! Similique!</p>
+   </div> 
 </body>
 </html>
