--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
    <div>
     <h3>My  Third Blog</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quaerat obcaecati reprehenderit, ratione est nihil dolores similique eveniet quia iure soluta omnis odio reiciendis facere pariatur impedit maiores sunt! Similique!</p>
+   </div>
+   <div>
+    <h3>How to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add a meaningful commit message</li>
+        <li>git push</li>
+    </ul>
    </div> 
 </body>
 </html>
