--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
         <li>git push</li>
     </ul>
    </div> 
+   <div> 
+    <h3>kim khai everyday one single dim</h3>
+    <img src="images/image.jpg"
+   </div>
 </body>
 </html>
